Bundle sqlite with windows build

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,5 @@ lib/generated_plugin_registrant.dart
 linux/flutter/generated_plugin_registrant.cc
 linux/flutter/generated_plugin_registrant.h
 macos/Flutter/GeneratedPluginRegistrant.swift
+windows/flutter/generated_plugin_registrant.h
+windows/flutter/generated_plugin_registrant.cc
