--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.5.0-dev <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -12,13 +12,13 @@ dependencies:
   
   # Dart
   cupertino_icons: ^0.1.2
-  moor: ^2.1.0
+  moor: ^3.1.0
   rxdart: ^0.22.2
   intl: ^0.16.0
 
   # Database for mobile and Desktop
-  moor_ffi: ^0.2.0
-  
+  moor_ffi: ^0.6.0
+ 
   # Helper to find the database path on mobile
   path_provider: ^1.3.0
   path: ^1.6.4
@@ -26,7 +26,7 @@ dependencies:
   # Web
 
 dev_dependencies:
-  moor_generator: ^2.1.1
+  moor_generator: ^3.1.0
   build_runner: ^1.6.7
   build_web_compilers: ^2.3.0
   flutter_test:
