--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: moor_shared
+gname: moor_shared
 description: A new Flutter project.
 
 version: 1.0.0+1
@@ -11,26 +11,26 @@ dependencies:
     sdk: flutter
 
   # Dart
-  cupertino_icons: ^0.1.2
-  moor: ^3.1.0
-  rxdart: ^0.22.2
-  intl: ^0.16.0
+  cupertino_icons: ^1.0.2
+  moor: ^4.2.0
+  rxdart: ^0.26.0
+  intl: ^0.17.0
 
   # Also use the latest version.
-  sqlite3_flutter_libs: ^0.2.0
+  sqlite3_flutter_libs: ^0.4.1
 
   # Helper to find the database path on mobile
-  path_provider: ^1.3.0
-  path: ^1.6.4
-  undo: ^1.3.0+1
+  path_provider: ^2.0.1
+  path: ^1.8.0
+  undo: ^1.3.1
   
-  bloc: ^6.0.3
-  flutter_bloc: ^6.0.5
+  bloc: ^7.0.0
+  flutter_bloc: ^7.0.0
 
 dev_dependencies:
-  moor_generator: ^3.1.0
-  build_runner: ^1.6.7
-  build_web_compilers: ^2.3.0
+  moor_generator: ^4.2.0
+  build_runner: ^1.12.2
+  build_web_compilers: ^2.16.5
   flutter_test:
     sdk: flutter
 
