--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -22,7 +22,10 @@ dependencies:
   # Helper to find the database path on mobile
   path_provider: ^2.0.1
   path: ^1.8.0
-  undo: ^1.3.1
+  undo:
+    path: ../undo
+
+  moor_db_viewer: 3.0.0
   
   bloc: ^7.0.0
   flutter_bloc: ^7.0.0
