--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,36 +4,35 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.13.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
   # Dart
-  cupertino_icons: ^1.0.2
-  moor: ^4.2.0
-  rxdart: ^0.26.0
+  cupertino_icons: ^1.0.3
+  moor: ^4.3.2
+  rxdart: ^0.27.1
   intl: ^0.17.0
 
   # Also use the latest version.
-  sqlite3_flutter_libs: ^0.4.1
+  sqlite3_flutter_libs: ^0.5.0
 
   # Helper to find the database path on mobile
-  path_provider: ^2.0.1
+  path_provider: ^2.0.2
   path: ^1.8.0
-  undo:
-    path: ../undo
+  undo: ^1.4.0
 
-  moor_db_viewer: 3.0.0
+  moor_db_viewer: ^4.0.0
   
   bloc: ^7.0.0
-  flutter_bloc: ^7.0.0
+  flutter_bloc: ^7.0.1
 
 dev_dependencies:
-  moor_generator: ^4.2.0
-  build_runner: ^1.12.2
-  build_web_compilers: ^2.16.5
+  moor_generator: ^4.3.1
+  build_runner: ^2.0.5
+  build_web_compilers: ^3.0.0
   flutter_test:
     sdk: flutter
 
