Upgrade dependencies all around

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,11 @@ dependencies:
 
   # Dart
   cupertino_icons: ^1.0.3
-  moor: ^4.3.2
+  drift: ^1.0.0
   rxdart: ^0.27.1
   intl: ^0.17.0
 
-  # Also use the latest version.
+  # Flutter plugin to provide the native sqlite3 library on iOS, macOS and Android
   sqlite3_flutter_libs: ^0.5.0
 
   # Helper to find the database path on mobile
@@ -24,13 +24,12 @@ dependencies:
   path: ^1.8.0
   undo: ^1.4.0
 
-  moor_db_viewer: ^4.0.0
-  
+  drift_db_viewer: ^1.0.3
   bloc: ^7.0.0
   flutter_bloc: ^7.0.1
 
 dev_dependencies:
-  moor_generator: ^4.3.1
+  drift_dev: ^1.0.0
   build_runner: ^2.0.5
   build_web_compilers: ^3.0.0
   flutter_test:
